2006-05-15  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: support assign operators
	* vala/parser.y: support assign operators and attributes
	* vala/valaattributeprocessor.vala: visitor to process compiler
	  attributes
	* vala/valacodegenerator.vala: support structs, enums, and methods
	* vala/valacodenode.vala: support attributes
	* vala/valaattribute.vala
	* vala/valamemberaccessibility.vala
	* vala/valamethod.vala
	* vala/valastruct.vala: support CCode (cname) attribute
	* vala/vala.h: update
	* compiler/valacompiler.vala: invoke AttributeProcessor
	* ccode/valaccodeblock.vala
	* ccode/valaccodeenum.vala
	* ccode/valaccodemethod.vala
	* ccode/valaccodemodifiers.vala
	* bindings/GLib.vala: add string cmp method
	* valac/scanner.l: support BITWISE_AND
	* valac/parser.y: support bitwise and
	* valac/context.h: add bitwise and
	* valac/generator.c: support enum dependencies and bitwise and

2006-05-14  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: support OPEN_CAST_PARENS, IS, WHILE
	* vala/parser.y: support structs, enums, and fields, cast, postfix,
	  while, ref types, and generic type parameters; fix comments
	* vala/valacodecontext.vala: add root symbol
	* vala/valasourcefile.vala: add using directives, c filenames
	* vala/valacodevisitor.vala: add begin and end visits for some container
	  types, add struct, enum, field, type parameter, namespace reference,
	  and type reference visits
	* vala/valaparser.vala: adapt to visitor changes
	* vala/valasymbolbiulder.vala: visitor to fill symbol table
	* vala/valasymbolresolver.vala: visitor to resolve symbol references
	* vala/valacodegenerator.vala: add beginning of code generation
	* vala/valacodenode.vala: add symbol reference
	* vala/valacastexpression.vala
	* vala/valaclass.vala: derive from struct
	* vala/valaenum.vala
	* vala/valaexpression.vala: add static_type, field_reference, and
	  method_reference fields
	* vala/valafield.vala
	* vala/valamemberaccess.vala